doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files\Greenfoot\jdk\bin\javadoc.exe
-author
-version
-nodeprecated
-protected
-Xdoclint:none
-noindex
-notree
-nohelp
-nonavbar
-source
11
-classpath
C:\Program Files\Greenfoot\lib\extensions\greenfoot.jar;C:\Program Files\Greenfoot\lib\bluejcore.jar;C:\Program Files\Greenfoot\lib\bluejeditor.jar;C:\Program Files\Greenfoot\lib\bluejext.jar;C:\Program Files\Greenfoot\lib\junit-4.11.jar;C:\Program Files\Greenfoot\lib\hamcrest-core-1.3.jar;C:\Program Files\Greenfoot\lib\bluej.jar;C:\Program Files\Greenfoot\lib\classgraph-4.2.6.jar;C:\Program Files\Greenfoot\lib\diffutils-1.2.1.jar;C:\Program Files\Greenfoot\lib\commons-logging-api-1.1.2.jar;C:\Program Files\Greenfoot\lib\jl1.0.1.jar;C:\Program Files\Greenfoot\lib\opencsv-2.3.jar;C:\Program Files\Greenfoot\lib\xom-1.2.9.jar;C:\Program Files\Greenfoot\lib\lang-stride.jar;C:\Program Files\Greenfoot\lib\nsmenufx-2.1.4.jar;C:\Program Files\Greenfoot\lib\richtextfx-fat-0.9.0.jar;C:\Program Files\Greenfoot\lib\guava-17.0.jar;C:\Program Files\Greenfoot\lib\httpclient-4.1.1.jar;C:\Program Files\Greenfoot\lib\httpcore-4.1.jar;C:\Program Files\Greenfoot\lib\httpmime-4.1.1.jar;C:\Program Files\Greenfoot\lib\javafx\lib\javafx.base.jar;C:\Program Files\Greenfoot\lib\javafx\lib\javafx.controls.jar;C:\Program Files\Greenfoot\lib\javafx\lib\javafx.fxml.jar;C:\Program Files\Greenfoot\lib\javafx\lib\javafx.graphics.jar;C:\Program Files\Greenfoot\lib\javafx\lib\javafx.media.jar;C:\Program Files\Greenfoot\lib\javafx\lib\javafx.properties.jar;C:\Program Files\Greenfoot\lib\javafx\lib\javafx.swing.jar;C:\Program Files\Greenfoot\lib\javafx\lib\javafx.web.jar;E:\Eksperimenku\Greenfoot\Chrome_dino_cobo\Chrome_dino
-d
E:\Eksperimenku\Greenfoot\Chrome_dino_cobo\Chrome_dino\doc
-encoding
UTF-8
-charset
UTF-8
E:\Eksperimenku\Greenfoot\Chrome_dino_cobo\Chrome_dino\ground.java
<---- end of javadoc command ---->
Loading source file E:\Eksperimenku\Greenfoot\Chrome_dino_cobo\Chrome_dino\ground.java...
E:\Eksperimenku\Greenfoot\Chrome_dino_cobo\Chrome_dino\ground.java:22: error: '(' or '[' expected
                MyWorld.addObject(new ground, 376, 303));
                                            ^
E:\Eksperimenku\Greenfoot\Chrome_dino_cobo\Chrome_dino\ground.java:22: error: ';' expected
                MyWorld.addObject(new ground, 376, 303));
                                                       ^
E:\Eksperimenku\Greenfoot\Chrome_dino_cobo\Chrome_dino\ground.java:24: error: ';' expected
                addObject(new ground(), 750, 303);
                         ^
E:\Eksperimenku\Greenfoot\Chrome_dino_cobo\Chrome_dino\ground.java:24: error: ';' expected
                addObject(new ground(), 750, 303);
                                      ^
4 errors
